--- a/QtWidgets-tr.vcxproj.filters
+++ b/QtWidgets-tr.vcxproj.filters
@@ -46,6 +46,9 @@
     <ClCompile Include="src\NXInterface.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\x_jsonclass.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="inc\dummy_paramset.h">
@@ -58,6 +61,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="headers.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="inc\x_jsonclass.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
